--- a/index.html
+++ b/index.html
@@ -24,7 +24,25 @@
         <div id="header_Image"></div>
     </header>
     <main>
-        
+        <div class="main_Div">
+            <section class="info_Card">
+                <h3 class="card_Title">Construction and Renovations Operations</h3>
+                <p class="card_Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="read_More">Read More</button>
+            </section>
+            
+            <section class="info_Card">
+                <h3 class="card_Title">Construction and Renovations Operations</h3>
+                <p class="card_Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="read_More">Read More</button>
+            </section>
+
+            <section class="info_Card">
+                <h3 class="card_Title">Construction and Renovations Operations</h3>
+                <p class="card_Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="read_More">Read More</button>
+            </section>
+        </div>
     </main>
     <footer></footer>
 </body>
