Add contents to footer element of the index page
As title suggests, fills out the footer element, with About Us column,
Contact column and Links column.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,37 @@
             </section>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer_Div">
+            <div class="footer-Column">
+                <img src="https://imgs.search.brave.com/twBPsG6XksKU00jO-wNEYEeFnljSamzmzMjWP19bhSc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9keW5h/bWljLmRlc2lnbi5j/b20vYXNzZXQvbG9n/by8wZDI1ODU2Ny0y/MzM0LTQ4MTEtOTRm/Zi0wOGY3NzhkNTli/YzcvbG9nby1zZWFy/Y2gtZ3JpZC0xeD9s/b2dvVGVtcGxhdGVW/ZXJzaW9uPTEmdj02/Mzg1MTE4NDAyOTE1/MDAwMDA"
+                 alt="Company Logo" class="footer_Logo" width="50px">
+                <p class="description_Footer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <a href="">Our Team</a>
+            </div>
+            <div class="footer-Column">
+                <h4>Contact</h4>
+                <address>
+                    <p class="description_Footer">Some Street Address</p>
+                    <p class="description_Footer">Phone: <span><a href="tel:+14155550132">+1 (415) 555‑0132</a></span></p>
+                    <p class="description_Footer">Email: <span><a href="mailto:jim@example.com">jim@example.com</a></span></p>
+                </address>
+            </div>
+            <div class="footer-Column">
+                <h4>Links</h4>
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            <div class="footer-Column">
+                <h4>Additional Information</h4>
+                <p>entry 1</p>
+                <p>entry 2</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
