Add introduction card to the header of landing
Adds an intro card giving a brief summary and rundown about the company
as well as providing a button to see more. Adds a css
rules for generic buttons. Adjusts certain positioning parameters.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
                 </ul>
             </nav>
         </div>
+        <div class="intro_Container">
+            <!-- <img src="" alt="" class="company_Image"> -->
+             <div class="intro_Left">
+                <h1 class="main_Title">Introducing <br><span id="tsr_Text">The Space Renovations</span></h1>
+                <p class="slogan">We make your dream home, your real home!</p>
+                <div class="intro_Description">
+                    <p>Explore a wide range of professional and personal development courses. Gain the skills you need to succeed in your career and thrive in life. Start learning today!</p>
+                    <button class="generic_Button">Read More</button>
+                </div>
+             </div>
+             <div class="intro_Right">
+                <img src="https://imgs.search.brave.com/N5TCtvoVG3D-9zotey9Qiq5G-By73cfHuP0QB-HApts/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvMTE1/MDQ5MTgxNy9waG90/by9hcmNoaXRlY3Qt/bG9va2luZy1hdC1m/bG9vci1wbGFuLW9u/LWRlc2suanBnP3M9/NjEyeDYxMiZ3PTAm/az0yMCZjPW9UOXZi/Vk0xalVmclNLcXd3/WG1scF9VZW9LY3VV/anhtcTdKenFtLXl1/V0k9" 
+            alt="" class="intro_Image" height="500" width="">
+             </div>
+        </div>
         <div id="header_Image"></div>
     </header>
     <main>
@@ -46,13 +61,13 @@
     </main>
     <footer>
         <div class="footer_Div">
-            <div class="footer-Column">
+            <div class="footer_Column">
                 <img src="https://imgs.search.brave.com/twBPsG6XksKU00jO-wNEYEeFnljSamzmzMjWP19bhSc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9keW5h/bWljLmRlc2lnbi5j/b20vYXNzZXQvbG9n/by8wZDI1ODU2Ny0y/MzM0LTQ4MTEtOTRm/Zi0wOGY3NzhkNTli/YzcvbG9nby1zZWFy/Y2gtZ3JpZC0xeD9s/b2dvVGVtcGxhdGVW/ZXJzaW9uPTEmdj02/Mzg1MTE4NDAyOTE1/MDAwMDA"
                  alt="Company Logo" class="footer_Logo" width="50px">
                 <p class="description_Footer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                 <a href="">Our Team</a>
             </div>
-            <div class="footer-Column">
+            <div class="footer_Column">
                 <h4>Contact</h4>
                 <address>
                     <p class="description_Footer">Some Street Address</p>
@@ -60,7 +75,7 @@
                     <p class="description_Footer">Email: <span><a href="mailto:jim@example.com">jim@example.com</a></span></p>
                 </address>
             </div>
-            <div class="footer-Column">
+            <div class="footer_Column">
                 <h4>Links</h4>
                 <ul>
                     <li><a href="">About Us</a></li>
@@ -69,7 +84,7 @@
                     <li><a href=""></a></li>
                 </ul>
             </div>
-            <div class="footer-Column">
+            <div class="footer_Column">
                 <h4>Additional Information</h4>
                 <p>entry 1</p>
                 <p>entry 2</p>
