Add completed footer
Adds some new elements and styling to footer to complete its look and
functionality.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/home.css">
     <title>The Space</title>
 </head>
 <body>
@@ -88,6 +89,14 @@
                 <h4>Additional Information</h4>
                 <p>entry 1</p>
                 <p>entry 2</p>
+            </div>
+        </div>
+        <div class="footer-divider"></div>
+        <div class="footer_Div_Lower">
+            <p class="copyright">COpyright all rights reserved</p>
+            <div class="tos">
+                <a href="">Privacy Policy</a>
+                <a href="">Terms of Service</a>
             </div>
         </div>
     </footer>
