Add Images directory and How We Work mp section
Added Images directory to organize all the graphic resources of the proj
simultaneously added the "How We Work" section to the main page with its
concomitant graphic illustrations.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,31 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p></section>
                 </div>
             </div>
-            
+        </div>
+        <div class="guide_Section">
+            <h2>How We Work</h2>
+            <div class="guide_Graphics">
+                <div class="steps">
+                    <div class="icon_Wrapper"><img src="Images/Icons/call_30dp_08BFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="icon_Step" 
+                        height="100" width="auto"></div>
+                    <p class="icon_Description">You call us</p>
+                </div>
+                <div class="steps">
+                    <div class="icon_Wrapper"><img src="Images/Icons/engineering_30dp_08BFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="icon_Step" 
+                        height="100" width="auto"></div>
+                    <p class="icon_Description">Our Representative Arrives</p>
+                </div>
+                <div class="steps">
+                    <div class="icon_Wrapper"><img src="Images/Icons/request_quote_30dp_08BFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="icon_Step"
+                    height="100" width="auto"> </div>
+                    <p class="icon_Description">We conduct fee estimations</p>
+                </div>
+                <div class="steps">
+                    <div class="icon_Wrapper"> <img src="Images/Icons/check_30dp_08BFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="icon_Step" 
+                        height="100" width="auto"></div>
+                    <p class="icon_Description">We deliver the promised high quality results!</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
