Replace footer tos text and style priv.pol. & tos
Replaces copyright text in the footer with more aesthetically congenial
content. Spaces out the Privacy Policy and ToS texts so that they do not
look crammed together.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
         <div class="footer-divider"></div>
         <div class="footer_Div_Lower">
-            <p class="copyright">COpyright all rights reserved</p>
+            <p class="copyright">© Copyright 2025, All Rights Reserved</p>
             <div class="tos">
                 <a href="">Privacy Policy</a>
                 <a href="">Terms of Service</a>
