Add Contact Us button to nav and adjust intro ruls
Adjusted intro container so that it is more responsive and retains de-
sign under different definitions. Added a Contact Us button, but now
separate from the navbar.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <li class="nav_Link"><a href="">About Us</a></li>
                     <li class="nav_Link"><a href="">Products</a></li>
                     <li class="nav_Link"><a href="">Services</a></li>
-                    <li class="nav_Link"><a href="">Contact Us</a></li>
                 </ul>
             </nav>
+            <button class="generic_Button">Contact Us</button>
         </div>
         <div class="intro_Container">
             <!-- <img src="" alt="" class="company_Image"> -->
