Revert "Navbar to display services separately"
This reverts commit dc3bd6cf9ae533e77492c613495d76c35b6fa340.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
                 <ul class="nav_List">
                     <li class="nav_Link"><a href="">Home</a></li>
                     <li class="nav_Link"><a href="">About Us</a></li>
-                    <li class="nav_Link"><a href="">Construction and Renovation</a></li>
-                    <li class="nav_Link"><a href="">Landscaping</a></li>
-                    <li class="nav_Link"><a href="">Property Management</a></li>
+                    <li class="nav_Link"><a href="">Products</a></li>
+                    <li class="nav_Link"><a href="">Services</a></li>
                 </ul>
             </nav>
             <button class="generic_Button">Contact Us</button>
