--- a/pages/services.html
+++ b/pages/services.html
@@ -45,21 +45,25 @@
             
             <div class="service_Container">
                 <div class="img_Wrapper">
-                    <img src="" alt="" class="thumbnail">
+                    <img src="https://cdn.prod.website-files.com/64a4ff71754d001d8b63f41d/64a50acd5fab23fac7baca5f_REBUILD%20Construction%20Webflow%20Template%20-%20interior%20plan-p-800.jpeg" 
+                    alt="" class="thumbnail">
                 </div>
                 <div class="service_Description">
-                    <h2></h2>
-                    <p></p>
+                    <h2>Renovation Operations</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <button class="learn_More">Learn More</button>
                 </div>
             </div>
 
             <div class="service_Container">
                 <div class="img_Wrapper">
-                    <img src="" alt="" class="thumbnail">
+                    <img src="https://cdn.prod.website-files.com/64a4ff71754d001d8b63f41d/64a50acd5fab23fac7baca5f_REBUILD%20Construction%20Webflow%20Template%20-%20interior%20plan-p-800.jpeg" 
+                    alt="" class="thumbnail">
                 </div>
                 <div class="service_Description">
-                    <h2></h2>
-                    <p></p>
+                    <h2>Renovation Operations</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <button class="learn_More">Learn More</button>
                 </div>
             </div>
         </div>
