Add the quote section to the services.html
Adds the quote section to the end of the services page that adds an
image, heading, a brief description of the business and the contact
button as the conclusion to the page.

--- a/pages/services.html
+++ b/pages/services.html
@@ -172,7 +172,20 @@
 
         <div class="quote_Section">
 
-            
+            <div class="quote_Container">
+                <div class="img_Quote_Container">
+                    <img src="https://assets.website-files.com/64a43510ff5f1676dff15f9c/64a43eb8cc880e8ea152390b_REBUILD%20Webflow%20Template%20-%20buildings%20sky.jpeg"
+                     alt="" class="img_Quote" height="1000px" width="auto">
+                </div>
+                <div class="quote_Desc_Positioner">
+                    <div class="quote_Desc_Container">
+                        <h2>Get a quote, for free!</h2>
+                        <p>At The Space Renovations, we pride ourselves on delivering exceptional service and craftsmanship in every project we undertake. Whether you're envisioning a complete home renovation, transforming your outdoor space, or seeking reliable property management solutions, our dedicated team is here to help bring your vision to life.</p>
+                        <button class="generic_Button quote_Contact_Btn">Contact Us</button>
+                    </div>
+                </div>
+                
+            </div>
 
         </div>
 
