--- a/pages/services.html
+++ b/pages/services.html
@@ -29,14 +29,22 @@
             <h1>We build for you,<br> find out about our <span>best services</span></h1>
         </div>
 
+        <div class="services_Intro">
+            <h2 class="services_Heading">What We Offer</h2>
+            <p class="intro_Description">At The Space, we specialize in creating and maintaining exceptional spaces. From stunning home renovations to vibrant landscapes and seamless property management, our expert team delivers quality and precision every step of the way.
+
+            </p>
+        </div>
+
         <div class="services_List">
+
             <div class="service_Container">
                 <div class="img_Wrapper">
                     <img src="https://cdn.prod.website-files.com/64a4ff71754d001d8b63f41d/64a50acd5fab23fac7baca5f_REBUILD%20Construction%20Webflow%20Template%20-%20interior%20plan-p-800.jpeg" 
                     alt="" class="thumbnail">
                 </div>
                 <div class="service_Description">
-                    <h2>Renovation Operations</h2>
+                    <h3>Renovation Operations</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <button class="learn_More">Learn More</button>
                 </div>
@@ -49,7 +57,7 @@
                     alt="" class="thumbnail">
                 </div>
                 <div class="service_Description">
-                    <h2>Landscaping</h2>
+                    <h3>Landscaping</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <button class="learn_More">Learn More</button>
                 </div>
@@ -61,7 +69,7 @@
                     alt="" class="thumbnail">
                 </div>
                 <div class="service_Description">
-                    <h2>Property Management</h2>
+                    <h3>Property Management</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <button class="learn_More">Learn More</button>
                 </div>
