Add social media links to footer with icons
Added it due to client request.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
             alt="The Space Renovations Logo" width="90px">
             <nav class="global_Nav">
                 <ul class="nav_List">
-                    <li class="nav_Link"><a href="">Home</a></li>
-                    <li class="nav_Link"><a href="">About Us</a></li>
-                    <li class="nav_Link"><a href="">Products</a></li>
-                    <li class="nav_Link"><a href="">Services</a></li>
+                    <li class="nav_Link"><a href="index.html">Home</a></li>
+                    <li class="nav_Link"><a href="pages/about.html">About Us</a></li>
+                    <li class="nav_Link"><a href="pages/">Products</a></li>
+                    <li class="nav_Link"><a href="pages/services.html">Services</a></li>
                 </ul>
             </nav>
-            <button class="generic_Button">Contact Us</button>
+            <button class="generic_Button"><a href="../pages/contact.html" style="text-decoration: inherit; color: inherit;">Contact Us</a></button>
         </div>
+        
         <div class="intro_Container">
             <!-- <img src="" alt="" class="company_Image"> -->
              <div class="intro_Left">
@@ -98,6 +99,19 @@
                 </div>
             </div>
         </div>
+        <div class="concluding_Statement">
+            <div class="concluding_Text">
+                <h2>Our mission is to deliver a high quality renovation, construction, landscaping and property management services</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
+                <button class="generic_Button"><a href="../pages/contact.html" style="text-decoration: inherit; color: inherit;">Get in touch!</a></button>
+            </div>
+            <div class="image_Wrapper">
+                <img src="https://cdn.prod.website-files.com/66be1e2c791627e193a54f36/66c674b457efef76a890415e_our-mission-image-landscaping-x-webflow-template.jpg"
+                 alt="">
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer_Div">
@@ -125,9 +139,13 @@
                 </ul>
             </div>
             <div class="footer_Column">
-                <h4>Additional Information</h4>
-                <p>entry 1</p>
-                <p>entry 2</p>
+                <h4>Social Media</h4>
+                <ul>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_One"></div><a href="">LinkedIn</a></li>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_Two"></div><a href="">Facebook</a></li>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_Three"></div><a href="">Instagram</a></li>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_Four"></div><a href="">Tiktok</a></li>
+                </ul>
             </div>
         </div>
         <div class="footer-divider"></div>
