Update footer in services and add it to contact

--- a/pages/services.html
+++ b/pages/services.html
@@ -20,7 +20,7 @@
                     <li class="nav_Link"><a href="services.html">Services</a></li>
                 </ul>
             </nav>
-            <button class="generic_Button">Contact Us</button>
+            <button class="generic_Button"><a href="../pages/contact.html" style="text-decoration: inherit; color: inherit;">Contact Us</a></button>
         </div>
     </header>
 
@@ -189,7 +189,7 @@
                     <div class="quote_Desc_Container">
                         <h2>Get a quote, for free!</h2>
                         <p>At The Space Renovations, we pride ourselves on delivering exceptional service and craftsmanship in every project we undertake. Whether you're envisioning a complete home renovation, transforming your outdoor space, or seeking reliable property management solutions, our dedicated team is here to help bring your vision to life.</p>
-                        <button class="generic_Button quote_Contact_Btn">Contact Us</button>
+                        <button class="generic_Button"><a href="contact.html" style="text-decoration: inherit; color: inherit;">Contact Us</a></button>
                     </div>
                 </div>
                 
@@ -224,9 +224,13 @@
                 </ul>
             </div>
             <div class="footer_Column">
-                <h4>Additional Information</h4>
-                <p>entry 1</p>
-                <p>entry 2</p>
+                <h4>Social Media</h4>
+                <ul>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_One"></div><a href="">LinkedIn</a></li>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_Two"></div><a href="">Facebook</a></li>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_Three"></div><a href="">Instagram</a></li>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_Four"></div><a href="">Tiktok</a></li>
+                </ul>
             </div>
         </div>
         <div class="footer-divider"></div>
