--- a/pages/contact.html
+++ b/pages/contact.html
@@ -196,6 +196,50 @@
          </div>
 
     </main>
+    <footer>
+        <div class="footer_Div">
+            <div class="footer_Column">
+                <img src="https://imgs.search.brave.com/twBPsG6XksKU00jO-wNEYEeFnljSamzmzMjWP19bhSc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9keW5h/bWljLmRlc2lnbi5j/b20vYXNzZXQvbG9n/by8wZDI1ODU2Ny0y/MzM0LTQ4MTEtOTRm/Zi0wOGY3NzhkNTli/YzcvbG9nby1zZWFy/Y2gtZ3JpZC0xeD9s/b2dvVGVtcGxhdGVW/ZXJzaW9uPTEmdj02/Mzg1MTE4NDAyOTE1/MDAwMDA"
+                 alt="Company Logo" class="footer_Logo" width="50px">
+                <p class="description_Footer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <a href="">Our Team</a>
+            </div>
+            <div class="footer_Column">
+                <h4>Contact</h4>
+                <address>
+                    <p class="description_Footer"><div class="footer_Icon_One"></div> Some Street Address</p>
+                    <p class="description_Footer"><div class="footer_Icon_Two"></div> Phone: <span><a href="tel:+14155550132">+1 (415) 555‑0132</a></span></p>
+                    <p class="description_Footer"><div class="footer_Icon_Three"></div> Email: <span><a href="mailto:jim@example.com">jim@example.com</a></span></p>
+                </address>
+            </div>
+            <div class="footer_Column">
+                <h4>Links</h4>
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            <div class="footer_Column">
+                <h4>Social Media</h4>
+                <ul>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_One"></div><a href="">LinkedIn</a></li>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_Two"></div><a href="">Facebook</a></li>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_Three"></div><a href="">Instagram</a></li>
+                    <li class="social_Link"><div class="footer_Social_Icon" id="soc_Four"></div><a href="">Tiktok</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-divider"></div>
+        <div class="footer_Div_Lower">
+            <p class="copyright">© Copyright 2025, All Rights Reserved</p>
+            <div class="tos">
+                <a href="">Privacy Policy</a>
+                <a href="">Terms of Service</a>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="../js/accordion.js"></script>
 </html>
