Add FAQ section to the about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/about.css">
+    <link rel="stylesheet" href="../styles/accordion.css">
     <title>About Us</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
                 <ul class="nav_List">
                     <li class="nav_Link"><a href="../index.html">Home</a></li>
                     <li class="nav_Link"><a href="../pages/about.html">About Us</a></li>
-                    <li class="nav_Link"><a href="pages/">Products</a></li>
+                    <li class="nav_Link"><a href="projects.html">Products</a></li>
                     <li class="nav_Link"><a href="../pages/services.html">Services</a></li>
                 </ul>
             </nav>
@@ -54,48 +55,271 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a gravida nunc. Morbi molestie fermentum feugiat. 
                     </p>
                 </div>
-                <div class="values_Grid">
-                    <div class="value_Card">
-                        <div class="value_Thumbnail">
-                            <img src="https://www.shutterstock.com/image-photo/construction-worker-yellow-hard-hat-600nw-2518265201.jpg" 
-                            alt="">
-                        </div>
-                        <span>Commitment to the craft</span>
-                    </div>
-
-                    <div class="value_Card">
-                        <div class="value_Thumbnail">
-                            <img src="https://alis.alberta.ca/media/697275/civil-engineer.jpg?width=830&height=510&v=1d4acf1f52f4a80" 
-                            alt="">
-                        </div>
-                        <span>Technical Excellence</span>
-                    </div>
-
-                    <div class="value_Card">
-                        <div class="value_Thumbnail">
-                            <img src="https://images.ctfassets.net/pdf29us7flmy/6TIWLjaGyQBSYlslSx0W3t/53aa58fa85dccc1756c314c12f021b2d/Office_Workspaces_older_person_shaking_hands_with_other_person_-getty21-.jpg?w=720&q=100&fm=jpg" 
-                            alt="">
-                        </div>
-                        <span>Satisfaction of the Customer</span>
-                    </div>
-
-                    <div class="value_Card">
-                        <div class="value_Thumbnail">
-                            <img src="https://media.istockphoto.com/id/1332558192/photo/three-multi-ethnic-construction-workers-chatting.jpg?s=612x612&w=0&k=20&c=m6Sevw_6Xw-5LhpnT1C_P6UitIo04em3lhjfx-BGsKg=" 
-                            alt="">
-                        </div>
-                        <span>Inclusivity</span>
-                    </div>
-                </div>
+                
             </div>
             <div class="company_Vision">
-                <h3>Our Vision</h3>
+                <div class="value_Titling">
+                    <h3>Our Vision</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a gravida nunc. Morbi molestie fermentum feugiat. 
                     </p>
+                </div>
             </div>
         </div>
 
+        <section class="faq_Section">
+            <h2>FAQ</h2>
+            <div class="accordion_Container">
+                <div class="subtopic">
+                    <h3>Topic 1</h3>
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="subtopic">
+                    <h3>Topic 1</h3>
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="subtopic">
+                    <h3>Topic 1</h3>
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="subtopic">
+                    <h3>Topic 1</h3>
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion_Q">
+                            <span>Question</span>
+                            <div class="drop_Down_Button_Acc"></div>
+                        </div>
+                        <div class="panel hidden">
+                            <div class="accordion_A">Yappuchino</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer_Div">
@@ -141,6 +365,6 @@
             </div>
         </div>
     </footer>
-    
+    <script src="../js/accordion.js"></script>
 </body>
 </html>
